# tla2

./: .file_size_baselines.json  .gitignore  .ignore-check-exclude  Cargo.toml  INTEGRITY.json  LICENSE  README.md
crates/pnml-tools/: Cargo.toml
crates/pnml-tools/src/: lib.rs  main.rs
crates/pnml-tools/tests/: colored_model_public_contract.rs  hlpnml_public_guards.rs  kinduction_benchmark_soundness.rs  liveness_benchmark_regression.rs  mcc_public_regressions.rs  mcc_structural_registry.rs  public_api.rs
crates/tla-adler2/: Cargo.toml
crates/tla-adler2/src/: algo.rs  lib.rs
crates/tla-aiger/: Cargo.toml
crates/tla-aiger/src/: bmc.rs  check_result.rs  cnf.rs  coi.rs  error.rs  inn_proper.rs  kind.rs  lib.rs  parser.rs  portfolio.rs  sat_types.rs  ternary.rs  to_chc.rs  transys.rs  types.rs
crates/tla-aiger/tests/: inn_proper_cal14.rs  synthesis_smoke.rs  unsafe_canary_smoke.rs
crates/tla-allocator-api2/: Cargo.toml
crates/tla-allocator-api2/src/: lib.rs  nightly.rs
crates/tla-anyhow/: Cargo.toml  build.rs
crates/tla-anyhow/src/: backtrace.rs  chain.rs  context.rs  ensure.rs  error.rs  fmt.rs  kind.rs  lib.rs  macros.rs  nightly.rs  ptr.rs  wrapper.rs
crates/tla-arc/: Cargo.toml
crates/tla-arc-swap/: Cargo.toml
crates/tla-arc-swap/src/: access.rs  as_raw.rs  cache.rs  compile_fail_tests.rs  lib.rs  ref_cnt.rs  serde.rs  weak.rs
crates/tla-arc-swap/tests/: bug-198.rs  random.rs  stress.rs
crates/tla-arc/src/: arc.rs  arc_borrow.rs  arc_swap_support.rs  arc_union.rs  header.rs  iterator_as_exact_size_iterator.rs  lib.rs  offset_arc.rs  thin_arc.rs  unique_arc.rs
crates/tla-arena/: Cargo.toml
crates/tla-arena/src/: alloc.rs  boxed.rs  lib.rs
crates/tla-ariadne/: Cargo.toml
crates/tla-ariadne/src/: display.rs  draw.rs  lib.rs  source.rs  write.rs
crates/tla-async-trait/: Cargo.toml
crates/tla-async-trait/src/: args.rs  bound.rs  expand.rs  lib.rs  lifetime.rs  parse.rs  receiver.rs  verbatim.rs
crates/tla-async-trait/tests/: test.rs
crates/tla-auto-impl/: Cargo.toml
crates/tla-auto-impl/src/: analyze.rs  attr.rs  gen.rs  lib.rs  proxy.rs
crates/tla-beef/: Cargo.toml
crates/tla-beef/benches/: bench.rs
crates/tla-beef/src/: generic.rs  lean.rs  lib.rs  serde.rs  traits.rs  wide.rs
crates/tla-bignum/: Cargo.toml  README.md
crates/tla-bignum/bigint/: Cargo.toml
crates/tla-bignum/integer/: Cargo.toml
crates/tla-bignum/src/: lib.rs
crates/tla-bignum/traits/: Cargo.toml  build.rs
crates/tla-bit-set/: Cargo.toml
crates/tla-bit-set/src/: lib.rs
crates/tla-bit-vec/: Cargo.toml
crates/tla-bit-vec/src/: lib.rs
crates/tla-bitflags/: Cargo.toml
crates/tla-bitflags/src/: example_generated.rs  external.rs  internal.rs  iter.rs  lib.rs  parser.rs  public.rs  tests.rs  traits.rs
crates/tla-btor2/: Cargo.toml
crates/tla-btor2/benches/: hwmcc_parse.rs
crates/tla-btor2/src/: bitblast.rs  bmc.rs  coi.rs  error.rs  lib.rs  parser.rs  portfolio.rs  simplify.rs  to_chc.rs  translate.rs  types.rs
crates/tla-btor2/tests/: correctness_77c.rs  hwmcc_validation.rs  parse_smoke.rs  portfolio_smoke.rs
crates/tla-bytemuck/: Cargo.toml
crates/tla-bytemuck/src/: allocation.rs  anybitpattern.rs  checked.rs  contiguous.rs  derive.rs  internal.rs  lib.rs  must.rs  no_uninit.rs  offset_of.rs  pod.rs  pod_in_option.rs  transparent.rs  zeroable.rs  zeroable_in_option.rs
crates/tla-bytemuck/tests/: array_tests.rs  cast_slice_tests.rs  checked_tests.rs  derive.rs  doc_tests.rs  offset_of_tests.rs  std_tests.rs  transparent.rs  wrapper_forgets.rs
crates/tla-bytes/: Cargo.toml
crates/tla-bytes/benches/: buf.rs  bytes.rs  bytes_mut.rs
crates/tla-bytes/src/: bytes.rs  bytes_mut.rs  lib.rs  loom.rs  serde.rs
crates/tla-bytes/tests/: test_buf.rs  test_buf_mut.rs  test_bytes.rs  test_bytes_odd_alloc.rs  test_bytes_vec_alloc.rs  test_chain.rs  test_debug.rs  test_iter.rs  test_limit.rs  test_reader.rs  test_serde.rs  test_take.rs
crates/tla-cert/: Cargo.toml
crates/tla-cert/src/: axiom_check.rs  checker.rs  formula_ops.rs  lib.rs  types.rs
crates/tla-cert/tests/: public_api.rs
crates/tla-cfg-if/: Cargo.toml
crates/tla-cfg-if/src/: lib.rs
crates/tla-cfg-if/tests/: xcrate.rs
crates/tla-check/: Cargo.toml
crates/tla-check/benches/: arena_alloc.rs  flat_fingerprint_bench.rs  hot_path.rs  hot_path_collections.rs  hot_path_fingerprint.rs  hot_path_fixtures.rs  hot_path_sequences.rs  model_check.rs
crates/tla-check/reports/: 2026-01-15-prover-verification-session.md
crates/tla-check/src/: action_metrics.rs  adaptive.rs  adaptive_setup.rs  adaptive_tests.rs  cfg_overrides.rs  checker_config.rs  checker_ops_constraint_tests.rs  checker_setup.rs  collision_detection.rs  complexity_visitor.rs  convergence.rs  cooperative_state.rs  deadlock_analysis.rs  debug_env.rs  disabled_action_stats.rs  distributed.rs  enumerate.rs  error.rs  error_policy.rs  fingerprint.rs  guard_error_stats.rs  incremental_check.rs  incremental_solver.rs  init_strategy.rs  interactive.rs  itf.rs  json_path.rs  lib.rs  materialize.rs  memory.rs  minimize.rs  on_the_fly_ltl.rs  per_invariant.rs  periodic_liveness.rs  reset.rs  reset_tests.rs  resource_budget.rs  resource_budget_tests.rs  shared_verdict.rs  smt_compat.rs  (+21 more)
crates/tla-check/tests/: adaptive_regressions.rs  apalache_parity_regression.rs  arena_fallback_mode.rs  bug_1482_computed_primed_domain.rs  bug_1500_prime_in_set_filter_reject.rs  bug_1558_gameoflife.rs  bug_1653_instance_state_predicate.rs  bug_2465_verifythis_mergesortruns.rs  bug_295_extends_instance_scoping.rs  bug_3046_instance_property_false_positive.rs  bug_3147_ewd998pcal_implicit_instance.rs  bug_3148_voteproof_real_spec.rs  bug_3149_acp_nb_tlc_ac4_alt.rs  bug_3155_streaming_view_symmetry.rs  bug_3401_promoted_property_tir.rs  (+101 more)
crates/tla-cli/: Cargo.toml  build.rs
crates/tla-codegen/: Cargo.toml
crates/tla-codegen-backend/: Cargo.toml  build.rs
crates/tla-codegen-frontend/: Cargo.toml
crates/tla-concurrent/: AUDIT.md  Cargo.toml
crates/tla-core/: Cargo.toml
crates/tla-crc32fast/: Cargo.toml  MAINTENANCE.md  build.rs
(+7651 files in other folders)
