# TLA2 fork of allocator-api2 0.2.21 (Part of #4250, Wave 14, Tier 3 zero-dep).
#
# Verbatim fork of https://github.com/zakarumych/allocator-api2 @ v0.2.21.
# Package name preserved as `allocator-api2` so `[patch.crates-io]` in the
# workspace root redirects every transitive consumer (hashbrown 0.15 and
# others) to this single in-tree copy.
#
# License: MIT OR Apache-2.0 (upstream-preserved, see LICENSE-* files).
# Upstream: Zakarum <zaq.dev@icloud.com>

[package]
name = "allocator-api2"
version = "0.2.21"
edition = "2018"
authors = ["Zakarum <zaq.dev@icloud.com>", "Andrew Yates"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/allocator-api2"
homepage = "https://github.com/zakarumych/allocator-api2"
repository = "https://github.com/zakarumych/allocator-api2"
readme = "README.md"
description = "Mirror of Rust's allocator API (TLA2 vendored fork)"
rust-version = "1.63"

[features]
alloc = []
std = ["alloc"]
default = ["std"]
nightly = []
fresh-rust = []

[dependencies]
serde = { version = "1.0", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(no_global_oom_handling)',
] }
