[package]
name = "tla-arc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors = [
    "Andrew Yates",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "The Servo Project Developers",
]
description = "Verbatim fork of triomphe (Arc without weak references) vendored into tla2 for zero-external-dep posture"
readme = "README.md"

# Verbatim fork of triomphe 0.1.15.
# Upstream: https://github.com/Manishearth/triomphe
# Original license: MIT OR Apache-2.0 (preserved in LICENSE-MIT / LICENSE-APACHE).
# The fork keeps the upstream public module layout (`tla_arc::Arc`, `ArcBorrow`,
# `OffsetArc`, `ThinArc`, `UniqueArc`, `ArcUnion`, `HeaderSlice`, etc.) so the
# workspace can alias this crate as `triomphe` via `package = "tla-arc"` with
# zero source changes at the consumer.

[features]
std = []
default = ["serde", "stable_deref_trait", "std"]

unstable_dropck_eyepatch = []

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
stable_deref_trait = { version = "1.1.1", default-features = false, optional = true }
unsize = { version = "1.1", optional = true }
arc-swap = { version = "1.3.0", optional = true }

# NOTE: We intentionally do NOT apply the workspace pedantic lints here.
# This is a verbatim upstream fork; enabling pedantic lints would generate
# hundreds of warnings on code we did not write. Touch-ups happen in a
# separate pass if/when we diverge from upstream.
